--- a/nest/nest/Properties/launchSettings.json
+++ b/nest/nest/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "nest": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7008;http://localhost:5090",
+      "applicationUrl": "http://localhost:10935",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
