--- a/nest/nest/appsettings.json
+++ b/nest/nest/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "default": "Server=localhost;Database=nest;User=sa;Password=MyPassword123#;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
