--- a/nest/nest/appsettings.json
+++ b/nest/nest/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "default": "Server=localhost;Database=nest;User=sa;Password=MyPassword123#;"
+    "default": "Server=localhost;Database=nest;User=SA;Password=MyPassword123#;"
   },
   "Logging": {
     "LogLevel": {
