--- a/nest/nest/nest.csproj
+++ b/nest/nest/nest.csproj
@@ -13,6 +13,7 @@
     <Folder Include="wwwroot\" />
     <Folder Include="Views\Shop\" />
     <Folder Include="DAL\" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Microsoft.EntityFrameworkCore" />
@@ -21,6 +22,7 @@
     <None Remove="Views\Shop\" />
     <None Remove="DAL\" />
     <None Remove="Microsoft.EntityFrameworkCore.SqlServer" />
+    <None Remove="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.9" />
